<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
            android:title="blah">

        <EditTextPreference
                android:key="pref_username"
                android:title="@string/pref_username_title"
                android:summary="@string/pref_username_summ" />
        
        <EditTextPreference
                android:key="pref_password"
                android:title="@string/pref_password_title"
                android:summary="@string/pref_password_summ" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_cat_server_title">

        <EditTextPreference
                android:key="pref_server_ip"
                android:title="@string/pref_ip_address_title"
                android:summary="@string/pref_ip_address_summ" />
        
        <EditTextPreference
                android:key="pref_server_port"
                android:title="@string/pref_port_number_title"
                android:summary="@string/pref_port_number_summ"
                android:inputType="number" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_cat_misc_title">

        <CheckBoxPreference
                android:key="pref_debug_mode"
                android:title="@string/pref_debug_mode_title"
                android:summary="@string/pref_debug_mode_summ" />

    </PreferenceCategory>
    
</PreferenceScreen>
